# CastlevaniaSDL

./: .gitignore  .reset.ps1.un~  CMakeLists.txt  README.md  reset  run
jsoncpp/: CMakeLists.txt
res/sprites/: simon.aseprite  simon.json
res/tilemaps/: level1.json
src/: CMakeLists.txt  Game.cpp  Game.hpp  Libs.h  main.cpp
src/dependencies/: CMakeLists.txt
src/dependencies/jsoncpp/json/: json.h
src/entities/: CMakeLists.txt  Entity.cpp  Entity.hpp  Player.cpp  Player.hpp
src/managers/: AnimationManager.cpp  AnimationManager.hpp  CMakeLists.txt  InputManager.cpp  InputManager.hpp  TextureManager.cpp  TextureManager.hpp
src/physics/: BoundingBox.cpp  BoundingBox.hpp  CMakeLists.txt
src/utilities/: CMakeLists.txt  Functions.cpp  Functions.hpp  JSONLoader.cpp  JSONLoader.hpp  TileMap.cpp  TileMap.hpp  Vector.cpp  Vector.hpp
